# flow-umbrella

./: .gitignore  LICENSE  Makefile  README.md
apps/umbrella-server/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml
apps/umbrella-server/alembic/: env.py
apps/umbrella-server/alembic/versions/: 06647c3c9e10_add_agents_table.py  097b6fc1a2e3_add_avatar_url_to_admins_and_delete_.py  2cadf3f47ad5_add_avatar_url_to_admins.py  5890732483fd_add_admins_and_refresh_tokens.py  a2b3c4d5e6f7_rename_agent_enum_values_to_lowercase.py  a3f1c2d4e5b6_add_policies_table.py  b7c8d9e0f1a2_add_services_and_refactor_policy_rules.py  bb6189232cb8_add_groups_and_agent_group_memberships.py  c1d2e3f4a5b6_add_kind_to_policies_and_services.py  d2e3f4a5b6c7_add_agent_token_fields_and_commands.py  e3f4a5b6c7d8_add_policy_assignments.py  f05e6e98e85c_add_branch_config_table.py  f1a2b3c4d5e6_rename_admin_role_enum_values_to_lowercase.py  g4h5i6j7k8l9_add_sync_policies_decommission_command_types.py  h5i6j7k8l9m0_add_agent_metrics_table.py  i6j7k8l9m0n1_enrollment_tokens_rework_agent_lifecycle.py  j7k8l9m0n1o2_enrollment_token_max_uses.py  k8l9m0n1o2p3_add_process_snapshots_and_stats.py  l9m0n1o2p3q4_add_audit_logs.py
apps/umbrella-server/scripts/: gen_nginx_cert.py
apps/umbrella-server/src/umbrella_server/: main.py
apps/umbrella-server/src/umbrella_server/cli/: create_superadmin.py
apps/umbrella-server/src/umbrella_server/core/: config.py  exceptions.py  logging.py  pagination.py
apps/umbrella-server/src/umbrella_server/db/: __init__.py  base.py  models.py  session.py
apps/umbrella-server/src/umbrella_server/di/: __init__.py  container.py
apps/umbrella-server/src/umbrella_server/di/providers/: config.py  db.py
apps/umbrella-server/src/umbrella_server/domains/agents/: dependencies.py  exceptions.py  models.py  providers.py  repository.py  schemas.py  service.py
apps/umbrella-server/src/umbrella_server/domains/audit/: models.py  providers.py  repository.py  schemas.py  service.py
apps/umbrella-server/src/umbrella_server/domains/auth/: capabilities.py  dependencies.py  exceptions.py  models.py  providers.py  repository.py  router.py  schemas.py  security.py  service.py
apps/umbrella-server/src/umbrella_server/domains/commands/: exceptions.py  models.py  providers.py  repository.py  schemas.py  service.py
apps/umbrella-server/src/umbrella_server/middleware/: exception_handlers.py
apps/umbrella-server/src/umbrella_server/pki/: __init__.py  ca.py  decommission_key.py
apps/umbrella-server/src/umbrella_server/shared/: sse_broker.py
docs/: architecture.md
(+346 files in other folders)
